[package]
name = "libcontainer-rs"
version = "0.1.0"
edition = "2021"
exclude = ["./tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
sys-mount = "1"
nix = "0.23.1"
ipc-channel = "0.15"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
simple_logger = "2.1"
